--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -725,7 +725,7 @@ There were some exceptions to this workflow:
 		we created an appropriate Issue on the GitHub repository.
 \end{itemize}
 
-Additionally, we did weekly meetings to discuss the progress and future contributions.
+Additionally, we held weekly meetings with the four of us to discuss the progress and future contributions (we did not need to have regular meeting with our mentor, because we had constant and immediate contact with him through chat).
 
 \section{Responsibilities}
 
