--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -831,7 +831,7 @@ TODO:
 
 	\item Mieszko:
 		\begin{itemize}
-			\item Reported an incorrect behavior of the CLI, which was choosing the latest release from the registry as a baseline version even if it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and created a set of unit tests for choosing baseline \cite{pr_choosing_baseline}.
+			\item Reported an incorrect behavior of the CLI which was choosing the latest release from the registry as a baseline version even when it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and created a set of unit tests for choosing the baseline crate \cite{pr_choosing_baseline}.
 
 			\item Reported a problem in release \texttt{v0.18.2}, where CLI was not looking for the baseline in the registry as it was supposed to \cite{issue_finding_registry_baseline}.
 
