--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -833,7 +833,7 @@ TODO:
 		\begin{itemize}
 			\item Reported an incorrect behavior of the CLI which was choosing the latest release from the registry as a baseline version even when it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and created a set of unit tests for choosing the baseline crate \cite{pr_choosing_baseline}.
 
-			\item Reported a problem in release \texttt{v0.18.2}, where CLI was not looking for the baseline in the registry as it was supposed to \cite{issue_finding_registry_baseline}.
+			\item Reported a problem in release \texttt{v0.18.2}, where the CLI was not looking for the baseline in the registry as it was supposed to do \cite{issue_finding_registry_baseline}.
 
 			\item Reported a bug where the precompiled tool failed on Windows machines \cite{issue_fail_on_windows}. Added a CI job exposing the issue \cite{pr_fail_on_windows}, \cite{pr_ci_windows_comment}.
 
