--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -837,7 +837,7 @@ TODO:
 
 			\item Reported a bug where the precompiled tool crashed on Windows machines \cite{issue_fail_on_windows}. Added a CI job exposing the issue \cite{pr_fail_on_windows} \cite{pr_ci_windows_comment}.
 
-			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}, \cite{pr_action_inputs_issues}, which consisted of
+			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2} \cite{pr_action_inputs_issues}, which consisted of
 			\begin{itemize}
 				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow testing the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the CI tests to cover all options added in the new version;
 				\item making use of \texttt{cargo-semver-checks} built-in baseline choosing logic, which fixed the user-reported issue \cite{issue_action_builtin_logic};
