--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -839,7 +839,7 @@ TODO:
 
 			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2} \cite{pr_action_inputs_issues}, which consisted of
 			\begin{itemize}
-				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow testing the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the CI tests to cover all options added in the new version;
+				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow that tests the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the CI tests to cover all options added in the new version;
 				\item making use of \texttt{cargo-semver-checks} built-in baseline choosing logic, which fixed the user-reported issue \cite{issue_action_builtin_logic};
 				\item adding support for running the action on Windows- and MacOs-based runners;
 				\item introducing input \texttt{manifest-path}, as requested by user \cite{issue_action_manifest_path};
