More precise explanation.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -881,8 +881,9 @@ TODO:
 					\item traits \cite{pr_lint_trait_must_use_added},
 					\item functions \cite{pr_lint_function_must_use_added},
 					\item methods \cite{pr_method_moved_to_trait_must_use_added},
-					\item inherent methods (when both moved to a public trait and marked
-						with the attribute) \cite{pr_inherent_method_must_use_added}.
+					\item inherent methods (reported only when one was both moved to
+						a public trait and marked with the attribute)
+						\cite{pr_inherent_method_must_use_added}.
 				\end{itemize}
 
 			% Not closed yet:
