Explain why splitting the lint was good.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -874,7 +874,9 @@ TODO:
 
 			\item Added several new lints (trustfall queries, test crates, tests)
 				to detect when different items have been marked with the \texttt{must\_use}
-				attribute:
+				attribute. Writing separate lints for individual items allowed to provide more
+				descript messages for the user, improved the code structure by creating smaller,
+				more specialized files and made the final review process easier.
 				\begin{itemize}
 					\item enums \cite{pr_lint_enum_must_use_added},
 					\item structs \cite{pr_lint_struct_must_use_added},
