--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -699,7 +699,7 @@ hence our contributions were mostly composed of multiple, smaller changes.
 The usual workflow of writing code was as follows:
 \begin{enumerate}
 	\item discussing with our mentor (who is also the project maintainer) about
-		what improvements have the highest priority,
+		which improvements have the highest priority,
 	\item individually picking a few tasks based on our preferences,
 	\item implementing those tasks
 		(and sometimes also thinking about the design of the change)
