Forgot one line

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -886,7 +886,8 @@ TODO:
 				to detect when different items have been marked with the \texttt{must\_use}
 				attribute. Writing separate lints for individual items allowed to provide more
 				descript messages for the user, improved the code structure by creating smaller,
-				more specialized files and made the final review process easier.
+				more specialized files and made the final review process easier. The items that
+				undergo checks are:
 				\begin{itemize}
 					\item enums \cite{pr_lint_enum_must_use_added},
 					\item structs \cite{pr_lint_struct_must_use_added},
