--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -717,7 +717,7 @@ There were some exceptions to this workflow:
 	\item at the beginning, we split into two pairs and our mentor gave each of us
 		three tasks to work on together and familiarize with different aspects of the existing code,
 	\item to speedup the process of merging the Pull Requests,
-		sometimes we first reviewed each others' code,
+		we sometimes reviewed each others' code before passing it to our mentor,
 	\item when a user reported a bug, we often looked into the problem
 		and searched for a temporary fix of the bug as soon as possible,
 	\item when we encountered bugs or thought of possible additional improvements
