--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -695,7 +695,7 @@ TODO:
 \section{Used methodology}
 
 The project's functionalities and goals can be split into independent improvements,
-hence our contributions were mostly composed of multiple, smaller changes.
+hence our contributions were mostly composed of multiple smaller changes.
 The usual workflow of writing code was as follows:
 \begin{enumerate}
 	\item discussing with our mentor (who is also the project maintainer) about
