--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -715,7 +715,7 @@ The usual workflow of writing code was as follows:
 There were some exceptions to this workflow:
 \begin{itemize}
 	\item at the beginning, we split into two pairs and our mentor gave each of us
-		three tasks to work on together and familiarize with different aspects of the existing code,
+		introductory tasks to work on together and familiarize with different aspects of the existing code,
 	\item to speedup the process of merging the Pull Requests,
 		we sometimes reviewed each others' code before passing it to our mentor,
 	\item when a user reported a bug, we often looked into the problem
