--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -846,16 +846,16 @@ TODO:
 			\begin{itemize}
 				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow that tests
 					the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the
-					CI tests to cover all options added in the new version;
+					CI tests to cover all options added in the new version,
 				\item making use of \texttt{cargo-semver-checks} built-in baseline choosing logic, which fixed the
-					user-reported issue \cite{issue_action_builtin_logic};
-				\item adding support for running the action on Windows- and MacOs-based runners;
+					user-reported issue \cite{issue_action_builtin_logic},
+				\item adding support for running the action on Windows- and MacOs-based runners,
 				\item introducing input \texttt{manifest-path}, as requested by a user
-					\cite{issue_action_manifest_path};
-				\item introducing input \texttt{verbose}, as requested by a user \cite{issue_action_verbose};
+					\cite{issue_action_manifest_path},
+				\item introducing input \texttt{verbose}, as requested by a user \cite{issue_action_verbose},
 				\item using pre-build binaries to speed up the action, as requested by a user
-					\cite{issue_action_binaries};
-				\item \textbf{TODO}: \textit{baseline caching, when I will finish it...};
+					\cite{issue_action_binaries},
+				\item \textbf{TODO}: \textit{baseline caching, when I will finish it...},
 				\item rewriting the documentation of the action.
 			\end{itemize}
 
