--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -694,12 +694,38 @@ TODO:
 
 \section{Used methodology}
 
-TODO:
+The project's functionalities and goals can be split into independent improvements,
+hence our contributions were mostly composed of multiple smaller changes.
+The usual workflow of writing code was as follows:
+\begin{enumerate}
+	\item discussing with our mentor (who is also the project maintainer) about
+		which improvements have the highest priority,
+	\item individually picking a few tasks based on our preferences,
+	\item implementing those tasks
+		(and sometimes also thinking about the design of the change)
+		and creating Pull Requests
+		on the project's GitHub repositories,
+	\item going through an extensive review process with our mentor
+		(as there are often other contributors in the project besides us,
+		the code's readability is a strong focus point in the project),
+	\item getting the Pull Request merged by our mentor
+		and releasing (usually a few days later) a new version of the binary to the registry.
+\end{enumerate}
+
+There were some exceptions to this workflow:
 \begin{itemize}
-	\item describe how we've been developing the tool
-	\item describe our mentor's reviews
-	\item describe how initially we splitted our work and how we did it later
+	\item at the beginning, we split into two pairs and our mentor gave each of us
+		introductory tasks to work on together and familiarize with different aspects of the existing code,
+	\item to speedup the process of merging the Pull Requests,
+		we sometimes reviewed each others' code before passing it to our mentor,
+	\item when a user reported a bug, we often looked into the problem
+		and searched for a temporary fix of the bug as soon as possible,
+	\item when we encountered bugs or thought of possible additional improvements
+		in the tool's functionality,
+		we created an appropriate Issue on the GitHub repository.
 \end{itemize}
+
+Additionally, we held weekly meetings with the four of us to discuss the progress and future contributions (we did not need to have regular meeting with our mentor, because we had constant and immediate contact with him through chat).
 
 \section{Responsibilities}
 
