--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -835,7 +835,7 @@ TODO:
 				a baseline version even when it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and
 				created a set of unit tests for choosing the baseline crate \cite{pr_choosing_baseline}.
 
-			\item Reported a problem in release \texttt{v0.18.2}, where the CLI was not looking for the baseline in the
+			\item Reported a problem in release \texttt{v0.18.2} where the CLI was not looking for the baseline in the
 				registry as it was supposed to do \cite{issue_finding_registry_baseline}.
 
 			\item Reported a bug where the precompiled tool crashed on Windows machines \cite{issue_fail_on_windows}.
