--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -844,7 +844,7 @@ TODO:
 			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}
 				\cite{pr_action_inputs_issues}, which consisted of
 			\begin{itemize}
-				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow that tests
+				\item creating a test repository \cite{repo_action_tests} and using it to add a CI workflow that tests
 					the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the
 					CI tests to cover all options added in the new version,
 				\item making use of \texttt{cargo-semver-checks} built-in baseline choosing logic, which fixed the
