--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -885,7 +885,7 @@ TODO:
 			\item Added several new lints (trustfall queries, test crates, tests)
 				to detect when different items have been marked with the \texttt{must\_use}
 				attribute. Writing separate lints for individual items allowed to provide more
-				descript messages for the user, improved the code structure by creating smaller,
+				detailed messages for the user, improved the code structure by creating smaller,
 				more specialized files and made the final review process easier. The items that
 				undergo checks are:
 				\begin{itemize}
