--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -887,7 +887,7 @@ TODO:
 				attribute. Writing separate lints for individual items allowed to provide more
 				detailed messages for the user, improved the code structure by creating smaller,
 				more specialized files and made the final review process easier. The items that
-				undergo checks are:
+				undergo those checks are:
 				\begin{itemize}
 					\item enums \cite{pr_lint_enum_must_use_added},
 					\item structs \cite{pr_lint_struct_must_use_added},
