--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -909,7 +909,7 @@ TODO:
 	\item Mieszko and Bartosz:
 		\begin{itemize}
 			\item Added a new lint (trustfall query, test crates, tests) to detect when an exhaustive
-				public enum has the \texttt{non\_exhuastive} attribute added \cite{pr_lint_enum_non_exhaustive}.
+				public enum has the \texttt{non\_exhaustive} attribute added \cite{pr_lint_enum_non_exhaustive}.
 
 			\item Designed and implemented a new adapter schema for handling attributes
 				\cite{pr_adapter_new_schema_for_attributes}.
