--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -842,7 +842,7 @@ TODO:
 				Added a CI job exposing the issue \cite{pr_fail_on_windows} \cite{pr_ci_windows_comment}.
 
 			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}
-				\cite{pr_action_inputs_issues}, which consisted of
+				\cite{pr_action_inputs_issues}, which consisted of:
 			\begin{itemize}
 				\item creating a test repository \cite{repo_action_tests} and using it to add a CI workflow that tests
 					the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the
