--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -839,7 +839,7 @@ TODO:
 				registry as it was supposed to do \cite{issue_finding_registry_baseline}.
 
 			\item Reported a bug where the precompiled tool crashed on Windows machines \cite{issue_fail_on_windows}.
-				Added a CI job exposing the issue \cite{pr_fail_on_windows} \cite{pr_ci_windows_comment}.
+				Added a CI job that checks for similar issues \cite{pr_fail_on_windows} \cite{pr_ci_windows_comment}.
 
 			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}
 				\cite{pr_action_inputs_issues}, which consisted of:
