Hide a TODO line

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -855,7 +855,7 @@ TODO:
 				\item introducing input \texttt{verbose}, as requested by a user \cite{issue_action_verbose},
 				\item using pre-build binaries to speed up the action, as requested by a user
 					\cite{issue_action_binaries},
-				\item \textbf{TODO}: \textit{baseline caching, when I will finish it...},
+				% \item \textbf{TODO}: \textit{baseline caching, when I will finish it...},
 				\item rewriting the documentation of the action.
 			\end{itemize}
 
