--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -573,12 +573,12 @@ TODO:
 \end{itemize}
 
 \section{cargo-semver-checks}
-
-TODO:
-\begin{itemize}
-	\item describe in detail what is the job of cargo-semver-checks, without the adapters
-	\item describe its different usages and how they retrieve the necessary data
-\end{itemize}
+Cargo-semver-checks is a tool designed to detect semantic versioning violations within Rust crates.
+To do so, the new version of the crate undergoes multiple lint checks, which are meant to find
+public API changes between the base and new version of the crate. All of the data needed to compare
+the two versions is retrieved from rustdoc using Trustfall, which allows to introduce a layer
+of abstraction that remains constant (functions, structs, enums, variants etc.). To learn about the
+tool's practical usage and destiny, see chapter \ref{r:chapter_vision}.
 
 \section{trustfall-rustdoc-adapter}
 
