one more picture

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -606,12 +606,11 @@ there are four repositories that we have been actively contributing to for the l
 	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action.
 \end{itemize}
 
-% INSERT THE PROJECT STRUCTURE DIAGRAM ON WHITE BACKGROUND
-% \begin{figure}[h]
-% 	\centering
-% 	\caption{Diagram of the project structure}
-% 	\includegraphics[width=\linewidth]{project-structure-diagram.png}
-% \end{figure}
+\begin{figure}[h]
+	\centering
+	\caption{Diagram of the project structure (TODO: make it more pretty, add github action)}
+	\includegraphics[width=\linewidth]{project-structure-diagram.png}
+\end{figure}
 
 \section{cargo-semver-checks}
 
