--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -162,7 +162,8 @@ publish their own work to be used by others. Each registry contains an index, wh
 a searchable list of all the crates available within its registry. Cargo uses the selected registry
 and index to download crates and update dependencies.
 
-One can think of cargo as the Rust analogue of Python's pip. But despite their similar roles,
+One can think of cargo as the Rust analogue of Python's pip (the official package manager for
+Python, responsible for handling all \texttt{import} statements). But despite their similar roles,
 cargo has many advantages making it a lot safer than pip:
 \begin{itemize}
 	\item Cargo's crates are always installed using virtual environments, thus they cannot be
@@ -341,18 +342,15 @@ implement {\ttfamily Send} and {\ttfamily Sync}.
 In contrary, {\ttfamily Rc<str>} implements neither of them,
 so the change results in a publicly visible struct {\ttfamily Bar} losing a trait.
 
-The given example is not only unobvious, but also even harder to notice
-in large codebases, where those structs could be in completely different locations.
-In fact, a similar error crept into the release v3.2.0 of a well-known crate
-maintained by the Rust team -- {\ttfamily clap}.
-More details about it can be found in section \ref{r:section_real_life_semver_breaks}.
+The given example is not only unobvious, but also even harder to notice in large codebases, where
+those structs could be in completely different locations. In fact, a similar error crept into the
+release v3.2.0 of a well-known crate maintained by the Rust team -- {\ttfamily clap}. More details
+about it can be found in section \ref{r:section_real_life_semver_breaks}.
 
-The same issue almost happened
-(but has been prevented thanks to our tool)
-in another common library \texttt{rust-libp2p},
-where it is clear from the conversation \cite{issue_libp2p} that the maintainers
-were not expecting their type to stop being \texttt{UnwindSafe} and were likely not even aware that
-their type was publicly \texttt{UnwindSafe} to start with.
+The same issue almost happened (but has been prevented thanks to our tool) in another common
+library \texttt{rust-libp2p}, where it is clear from the conversation \cite{issue_libp2p} that
+the maintainers were not expecting their type to stop being \texttt{UnwindSafe} and were likely
+not even aware that their type was publicly \texttt{UnwindSafe} to start with.
 
 \section{Consequences of breaking semver}
 
@@ -363,14 +361,17 @@ This could also happen if the crate containing the violation is not an immediate
 so one semver break could result in tons of other broken crates.
 
 Debugging a cryptic compilation error that starts showing up one day,
-without any change to the code, can be frustrating. In fact, we have experienced it during our contributions
-(one of the tool's users opened a GitHub Issue \cite{issue_compiling_fails}), as one of our dependencies broke semver. This is a major problem, as it might drive the users to stop using such crate.
+without any change to the code, can be frustrating. In fact, we have experienced it during our
+contributions (one of the tool's users opened a GitHub Issue \cite{issue_compiling_fails}), as one
+of our dependencies broke semver. This is a major problem, as it might drive the users to stop
+using such crate.
 
-Because of that, maintainers have to yank
-the incorrect releases as soon as possible
--- otherwise more users would encounter this problem and their trust
-in this particular crate (and crates using it as a dependency)
-would decrease. Even though yanking the release seems easy, fixing the semver break could also result in a lot of additional work for the maintainers -- they have to investigate the semver break when it is reported, inform the users about the yanking and possibly help some move away from the faulty release.
+Because of that, maintainers have to yank the incorrect releases as soon as possible -- otherwise
+more users would encounter this problem and their trust in this particular crate (and crates using
+it as a dependency) would decrease. Even though yanking the release seems easy, fixing the semver
+break could also result in a lot of additional work for the maintainers -- they have to investigate
+the semver break when it is reported, inform the users about the yanking and possibly help some
+move away from the faulty release.
 
 \section{Real-life examples of semver breaks} \label{r:section_real_life_semver_breaks}
 
@@ -379,45 +380,42 @@ Some of popular Rust crates with millions of downloads happened to break semver:
     \item {\ttfamily pyo3 v0.5.1} accidentally changed a function signature \cite{pyo3-issue}
     \item {\ttfamily clap v3.2.0} accidentally had a type stop implementing an auto-trait \cite{clap-issue}
     \item multiple {\ttfamily block-buffer} versions accidentally broke their MSRV contract \cite{block-buffer-issue}
-    \item and many more. We have developed a script that scans all releases
-		for semver breaks we can detect. The results are covered in section \ref{r:section_scanning_script}
+    \item and many more. We have developed a script that scans all releases for semver breaks we
+		can detect. The results are covered in section \ref{r:section_scanning_script}
 \end{itemize}
 
-Those were examples of popular crates with experienced maintainers, but the problem is even more prominent in less used crates
-where developers might not know the common semver pitfalls. A paper \cite{paper}
-claims that out of the yanked (un-publised) releases,
-semver break was the leading reason for yanking, with a shocking 43\% rate.
-It also mentions that 3.7\% of all releases (and there is more than 300 000 of them already)
-are yanked, which shows the scale of the problem -- thousands of detected semver breaks.
+Those were examples of popular crates with experienced maintainers, but the problem is even more
+prominent in less used crates where developers might not know the common semver pitfalls. A paper
+\cite{paper} claims that out of the yanked (un-publised) releases, semver break was the leading
+reason for yanking, with a shocking 43\% rate. It also mentions that 3.7\% of all releases
+(and there is more than 300 000 of them already) are yanked, which shows the scale of the problem
+-- thousands of detected semver breaks.
 
 \section{Existing tools for detecting semver breaks}\label{r:section_existing_semver_tools}
 
-There are not many great tools for semver checking in existence.
-The main reason for that is that the semantics of popular languages
-make complete and automatic verification practically impossible.
-There are some initiatives to combat this. For example,
-the Elm languge\cite{elm-lang} by design enforces semantic versioning.
-Its type system enables automatic detection of all API changes.
-Outside of that, it does not appear that tools for checking semver
-in estabilished languages like Python or C++ are commonly used in the industry.
+There are not many great tools for semver checking in existence. The main reason for that is that
+the semantics of popular languages make complete and automatic verification practically impossible.
+There are some initiatives to combat this. For example, the Elm languge\cite{elm-lang} by design
+enforces semantic versioning. Its type system enables automatic detection of all API changes.
+Outside of that, it does not appear that tools for checking semver in estabilished languages like
+Python or C++ are commonly used in the industry.
 
 Unfortunately, the Rust language's semantics were also not designed with semver in mind.
-Despite this, there are some existing tools for semver checking.
-First of them, \texttt{cargo-breaking}, works on the abstract syntax tree.
-Although ASTs contain all the information needed for comparing API changes,
-it has a major drawback -- two trees must be navigated at once.
-It can get complex and tedious (especially when checking for moved or removed items), because the abstract syntax tree could change quite a lot,
-even without any public API changes.
-Another issue is that both language syntax and the structure of the abstract syntax tree
+Despite this, there are some existing tools for semver checking. First of them,
+\texttt{cargo-breaking}, works on the abstract syntax tree. Although ASTs contain all the
+information needed for comparing API changes, it has a major drawback -- two trees must be
+navigated at once. It can get complex and tedious (especially when checking for moved or removed
+items), because the abstract syntax tree could change quite a lot, even without any public API
+changes. Another issue is that both language syntax and the structure of the abstract syntax tree
 often change along with the development of the language, which makes maintenance time-consuming.
 
-The second existing tool is \texttt{rust-semverver}, which focuses on
-the metadata present in the rust-specific rlib binary static library format.
-Because of that, the user experience is far from ideal,
-as it forces the user to use some specific unstable versions of the language, and the quality of error messages is limited.
+The second existing tool is \texttt{rust-semverver}, which focuses on the metadata present in the
+rust-specific rlib binary static library format. Because of that, the user experience is far from
+ideal, as it forces the user to use some specific unstable versions of the language, and the
+quality of error messages is limited.
 
-In comparison, the cargo-semver-checks' approach to write lints as queries seems to work really well.
-Adding new queries is designed to be accessible and the maintenance comes down to
+In comparison, the cargo-semver-checks' approach to write lints as queries seems to work
+really well. Adding new queries is designed to be accessible and the maintenance comes down to
 keeping up with rustdoc API changes, which seems to be about as low effort as it could be.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -680,12 +678,6 @@ TODO:
 	\item describe how the code changed to be more welcoming for next contributors
 \end{itemize}
 
-\section{Conclusion}
-
-TODO:
-\begin{itemize}
-	\item write a conclusion
-\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                Team                 %
@@ -944,6 +936,16 @@ Additionally, we held weekly meetings with the four of us to discuss the progres
 		\end{itemize}
 \end{itemize}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%             Conclusion              %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Conclusion}\label{r:chapter_conclusion}
+
+TODO:
+\begin{itemize}
+	\item write a conclusion
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %            Bibliography             %
