Remove that flex **sadge**

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -470,8 +470,7 @@ to the interface of cargo's subcommands. Additionally, cargo developers
 take part in discussions about the design of the interface \cite{issue_cli_interface}
 or sometimes even review changes to the code or develop new functionalities.
 
-It is cargo-semver-checks that was chosen to be merged into cargo,
-not the other semver issues detecting tools,
+cargo-semver-checks was the one tool chosen to be merged into cargo,
 mainly because it is the easiest to maintain
 (as described in \ref{r:section_existing_semver_tools})
 and doesn't report false-positives.
